# blockchain-evaluation

./: README.md
Aptos/: .gitignore  README.md
Aptos/contract/: Move.toml  deploy.sh
Aptos/contract/sources/: IABS.move
Aptos/dapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Aptos/dapp/src/: App.tsx  constants.ts  helpers.ts  main.tsx  types.ts
Avalanche/dapp/: README.md  package-lock.json  package.json
Avalanche/dapp/src/: config.ts  main.tsx
Avalanche/smartcontract/: README.md  hardhat.config.ts
Avalanche/smartcontract/test/: IABS.test.ts
Ethereum/dapp/: README.md
Ethereum/dapp/src/: App.tsx  config.ts
Ethereum/smartcontract/: README.md  hardhat.config.ts  package-lock.json  package.json
Ethereum/smartcontract/contracts/: IABS.sol
Injective/: .gitignore  README.md
Injective/dapp/: README.md  package-lock.json  package.json
Injective/dapp/store/: counter.ts
Injective/smartcontract/: Cargo.toml  NOTICE
Injective/src/: contract.rs  error.rs  helpers.rs
Near/dapp/: README.md  package-lock.json
Near/smartcontract/: Cargo.toml  README.md
Near/smartcontract/src/: lib.rs
Polkadot/: .gitignore  README.md
Polkadot/contracts/: Cargo.toml  lib.rs
Polkadot/dapp/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Solana/dapp/: README.md  package-lock.json  package.json
Solana/smartcontract/: Anchor.toml  package-lock.json  package.json
Sui/dapp/: README.md  index.html  package-lock.json  package.json
Sui/smartcontract/: DEPLOYMENT.md  Move.toml
(+35 files in other folders)
